first token impl

--- a/pom.xml
+++ b/pom.xml
@@ -15,22 +15,18 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.5.3.RELEASE</version>
-<<<<<<< HEAD
 		<relativePath/> <!-- lookup parent from com.isssr.foodemperors.repository -->
-=======
-		<relativePath/> <!-- lookup parent fcom.isssr.foodemperors.repositorytory -->
->>>>>>> order_management
+
+
 	</parent>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-<<<<<<< HEAD
+
 		<start-class>com.isssr.foodemperors.FoodemperorsApplication</start-class>
-=======
-		<start-class>core.FoodemperorsApplication</start-class>
->>>>>>> order_management
+
 	</properties>
 
 	<dependencies>
@@ -62,6 +58,12 @@
 			<groupId>javax.inject</groupId>
 			<artifactId>javax.inject</artifactId>
 			<version>1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.7.0</version>
 		</dependency>
 	</dependencies>
 
