--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,5 @@ local.properties
 
 .DS_Store
 /target/
+/src/main/resources/application.properties
+/src/main/java/resources/application.properties
